Fix overflow issues

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 button:disabled {
     filter: brightness(0.7);
 }
@@ -53,7 +57,6 @@ select {
     display: grid;
     grid-template-columns: 1fr 120px;
     gap: 1rem;
-    /* padding: 0.7rem 0.2rem; */
     position: relative;
 }
 @media (min-width: 768px) {
